#	$Id$	

Changelog for HylaFAX 4.1.3 - Jun 27, 2002

* caused the wedged script to give exit status (06 Jul 2002)
* allowed faxgetty to identify extended RING data as a RING (06 Jul 2002)
* fixed a buffer overflow when receiving long scan lines (06 Jul 2002)
* enhanced Class1Modem::parseQuery() to parse correctly +FTM responses
  which contain item ranges (dashes) (27 Jun 2002)
* made fixes to enable gcc v3.0 compatibility (15 Jun 2002)
* made minor changes for Sun Forte compiler compatibility (14 Jun 2002)
* fixed hostname format string vulnerabilities in faxrm, faxalter, 
  faxstat, sendfax, sendpage, and faxwatch (14 Jun 2002)
* added TagLineFormat option for receiver's name (14 Jun 2002)
* added MultiTech RTFCC support via Class2RTFCC option (11, 28 Jun 2002)
* workaround a Lucent V92 firmware bug in HDLC frame tracing (08 Jun 2002)
* added Class2PTSQueryCmd for broken Class 2.0 firmwares (08 Jun 2002)
* fixed a TSI format string vulnerability in faxgetty (08 Jun 2002)
* fixed faxrcvd creation of PDFs other than letter size (08 Jun 2002)
* added sendfax -z option to read destinations from a file (08 Jun 2002)
* updated 'make clobberconfig' (27 May 2002)
* added support for Solaris DSOs (24 May 2002)
* fixed Class 1 sending CRP handling (24 May 2002)
* changed Class 1 reception protocol to tolerate long syslog
  delays which could be encountered in extremely heavy loads (24 May 2002)
* added prototype support for Sedlbauer Speedfax ISDN (24 May 2002)
* added Class1TCFRecvHack config option (24 May 2002)
* changed Class1SwitchingDelay to Class1SwitchingCmd (24 May 2002)
* more 64-bit system compatibility enhancement (24 May 2002)
* large update added initial Class 2.1 and V.34-fax support in particular
  for the MultiTech MT5634ZBA-V92 and MT5634ZPX-PCI-V92 (23 May, 14 Jun 2002)
* have faxsetup check the fax user home directory (23 May 2002)
* allow server-side usage of DisplayNumber in dialrules (23 May 2002)