@@ -6,6 +6,7 @@
 #
 # CONFIG: CLASS2.0:"Multi-Tech Systems"-"MT5634ZBA"-*
 # CONFIG: CLASS2.0:"Multi-Tech Systems"-"MT5634ZPX"-*
+# CONFIG: CLASS2.0:*-"ISI5634PCI"-*
 #
 # BEGIN-SERVER
 # END-SERVER
